Switched from creating a new Long for each base filename to using the valueOf function - efficiency
git-svn-id: https://cida-svn.er.usgs.gov/repos/dev/usgs/gdp/trunk@15720 622dc1fb-2224-0410-ab72-dc85a3975e1a